--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -131,7 +131,7 @@
         </div> 
         <div class="clients">
             <div class="container">
-                <header class="header">
+                <header class="header clients__header">
                     <h3 class="header__headline header__headline_white">Some of our clients</h3>
                     <p class="header__slogan header__slogan_white">We <span class="header__heart">&#9825;</span> every single one</p>
                 </header>
@@ -236,8 +236,8 @@
                                     <p class="card__post">Creative Director</p>
                                 </div>
                                 <ul class="card__list">
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -251,8 +251,8 @@
                                     <p class="card__post">Mastermind</p>
                                 </div>
                                 <ul class="card__list">
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -266,8 +266,8 @@
                                     <p class="card__post">Designer</p>
                                 </div>
                                 <ul class="card__list">
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -281,8 +281,8 @@
                                     <p class="card__post">Creative Director</p>
                                 </div>
                                 <ul class="card__list">
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -296,8 +296,8 @@
                                     <p class="card__post">Mastermind</p>
                                 </div>
                                 <ul class="card__list">
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
-                                    <li class="card__item"><a class="card__link" href=""><img src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Twitter_menu.png" alt="Tw"></a></li>
+                                    <li class="card__item"><a class="card__link" href=""><img class="card__icon" src="img/icons/Facebook_menu.png" alt="Fb"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -329,7 +329,7 @@
             <ul class="portfolio__list">
                 <li class="portfolio__item web">
                     <a class="portfolio__link" href="https://picsum.photos/id/155/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/155/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/155/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -339,7 +339,7 @@
                 </li>
                 <li class="portfolio__item digital-art">
                     <a class="portfolio__link" href="https://picsum.photos/id/255/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/255/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/255/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -349,7 +349,7 @@
                 </li>
                 <li class="portfolio__item Illustrations">
                     <a class="portfolio__link" href="https://picsum.photos/id/355/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/355/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/355/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -359,7 +359,7 @@
                 </li>
                 <li class="portfolio__item branding">
                     <a class="portfolio__link" href="https://picsum.photos/id/455/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/455/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/455/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -369,7 +369,7 @@
                 </li>
                 <li class="portfolio__item web">
                     <a class="portfolio__link" href="https://picsum.photos/id/555/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/555/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/555/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -379,7 +379,37 @@
                 </li>
                 <li class="portfolio__item branding">
                     <a class="portfolio__link" href="https://picsum.photos/id/655/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/655/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/655/500/400" alt="">
+                        <div class="portfolio__item_hover">
+                            <img src="img/chain.png" alt="">
+                            <p class="portfolio__text">Free Website PSD</p>
+                            <span class="portfolio__span">Branding</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio__item Illustrations">
+                    <a class="portfolio__link" href="https://picsum.photos/id/623/900/786">
+                        <img class="portfolio__img" src="https://picsum.photos/id/623/500/400" alt="">
+                        <div class="portfolio__item_hover">
+                            <img src="img/chain.png" alt="">
+                            <p class="portfolio__text">Free Website PSD</p>
+                            <span class="portfolio__span">Illustrations</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio__item digital-art">
+                    <a class="portfolio__link" href="https://picsum.photos/id/645/900/786">
+                        <img class="portfolio__img" src="https://picsum.photos/id/645/500/400" alt="">
+                        <div class="portfolio__item_hover">
+                            <img src="img/chain.png" alt="">
+                            <p class="portfolio__text">Free Website PSD</p>
+                            <span class="portfolio__span">Digital Art</span>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio__item branding">
+                    <a class="portfolio__link" href="https://picsum.photos/id/345/900/786">
+                        <img class="portfolio__img" src="https://picsum.photos/id/345/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -389,7 +419,7 @@
                 </li>
                 <li class="portfolio__item digital-art">
                     <a class="portfolio__link" href="https://picsum.photos/id/755/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/755/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/755/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -399,7 +429,7 @@
                 </li>
                 <li class="portfolio__item Illustrations">
                     <a class="portfolio__link" href="https://picsum.photos/id/855/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/855/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/855/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -409,7 +439,7 @@
                 </li>
                 <li class="portfolio__item Illustrations">
                     <a class="portfolio__link" href="https://picsum.photos/id/955/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/955/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/955/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -419,7 +449,7 @@
                 </li>
                 <li class="portfolio__item web">
                     <a class="portfolio__link" href="https://picsum.photos/id/165/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/165/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/165/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -429,7 +459,7 @@
                 </li>
                 <li class="portfolio__item digital-art">
                     <a class="portfolio__link" href="https://picsum.photos/id/265/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/265/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/265/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -437,9 +467,19 @@
                         </div>
                     </a>
                 </li>
+                <li class="portfolio__item web">
+                    <a class="portfolio__link" href="https://picsum.photos/id/125/900/786">
+                        <img class="portfolio__img" src="https://picsum.photos/id/125/500/400" alt="">
+                        <div class="portfolio__item_hover">
+                            <img src="img/chain.png" alt="">
+                            <p class="portfolio__text">Free Website PSD</p>
+                            <span class="portfolio__span">Web</span>
+                        </div>
+                    </a>
+                </li>
                 <li class="portfolio__item branding">
                     <a class="portfolio__link" href="https://picsum.photos/id/365/900/786">
-                        <img class="portfolio__img" src="https://picsum.photos/id/365/300/251" alt="">
+                        <img class="portfolio__img" src="https://picsum.photos/id/365/500/400" alt="">
                         <div class="portfolio__item_hover">
                             <img src="img/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
@@ -525,12 +565,12 @@
 <footer class="page-footer footer">
     <div class="container footer__container">
         <span class="copyright">© 2014 Roran. All rights reserved</span>
-        <a class="arrow_up" href="#home"><img src="img/icons/ArrowF.svg" alt="Up"></a>
+        <a class="arrow_up" href="#home"><img class="arrow_up__img" src="img/icons/ArrowF.svg" alt="Up"></a>
         <ul class="social footer__social">
-            <li class="social__item"><a class="social__link" href="#"><img src="img/icons/LinkedIn_footer.png" alt="Li"></a></li>
-            <li class="social__item"><a class="social__link" href="#"><img src="img/icons/Pinterest_footer.png" alt="P"></a></li>
-            <li class="social__item"><a class="social__link" href="#"><img src="img/icons/Twitter_footer.png" alt="Tw"></a></li>
-            <li class="social__item"><a class="social__link" href="#"><img src="img/icons/Facebook_footer.png" alt="Fb"></a></li>
+            <li class="social__item"><a class="social__link social__link__dark" href="#"><img src="img/icons/LinkedIn_footer.png" alt="Li"></a></li>
+            <li class="social__item"><a class="social__link social__link__dark" href="#"><img src="img/icons/Pinterest_footer.png" alt="P"></a></li>
+            <li class="social__item"><a class="social__link social__link__dark" href="#"><img src="img/icons/Twitter_footer.png" alt="Tw"></a></li>
+            <li class="social__item"><a class="social__link social__link__dark" href="#"><img src="img/icons/Facebook_footer.png" alt="Fb"></a></li>
         </ul>
     </div>    
 </footer>
