--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -312,7 +312,7 @@
     <!-- portfolio  -->
 
     <section class="section-portfolio portfolio" id="portfolio">
-        <div class="container">
+        <div class="container portfolio_conteiner">
             <header class="header">
                 <h2 class="header__headline">Portfolio</h2>
                 <p class="header__slogan">This is what we’ve been working on</p>
@@ -331,7 +331,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/155/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/155/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Web</span>
                         </div>
@@ -341,7 +341,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/255/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/255/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Digital Art</span>
                         </div>
@@ -351,7 +351,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/355/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/355/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Illustrations</span>
                         </div>
@@ -361,7 +361,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/455/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/455/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Branding</span>
                         </div>
@@ -371,7 +371,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/555/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/555/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Web</span>
                         </div>
@@ -381,7 +381,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/655/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/655/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Branding</span>
                         </div>
@@ -391,7 +391,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/623/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/623/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Illustrations</span>
                         </div>
@@ -401,7 +401,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/645/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/645/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Digital Art</span>
                         </div>
@@ -411,7 +411,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/345/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/345/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Branding</span>
                         </div>
@@ -421,7 +421,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/755/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/755/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Digital Art</span>
                         </div>
@@ -431,7 +431,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/855/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/855/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Illustrations</span>
                         </div>
@@ -441,7 +441,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/955/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/955/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Illustrations</span>
                         </div>
@@ -451,7 +451,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/165/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/165/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Web</span>
                         </div>
@@ -461,7 +461,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/265/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/265/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Digital Art</span>
                         </div>
@@ -471,7 +471,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/125/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/125/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Web</span>
                         </div>
@@ -481,7 +481,7 @@
                     <a class="portfolio__link" href="https://picsum.photos/id/365/900/786">
                         <img class="portfolio__img" src="https://picsum.photos/id/365/500/400" alt="">
                         <div class="portfolio__item_hover">
-                            <img src="img/chain.png" alt="">
+                            <img src="img/icons/chain.png" alt="">
                             <p class="portfolio__text">Free Website PSD</p>
                             <span class="portfolio__span">Branding</span>
                         </div>
